unpackaged/main/default/objects/Configuration__mdt/Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This object stores the general configurations for the current Arcode Suite instance.</description>
    <label>Configuration</label>
    <pluralLabel>Configurations</pluralLabel>
</CustomObject>