unpackaged/main/default/objects/Configuration__mdt/fields/EncryptAttachmentLogs__c.field-meta.xml
<CustomField>
    <fullName>EncryptAttachmentLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, those Transaction logs bigger than 131072 (Text Area fields) will be stored as encrypted attachments, otherwise the data will be plain text.</description>
    <inlineHelpText>If true, those Transaction logs bigger than 131072 (Text Area fields) will be stored as encrypted attachments, otherwise the data will be plain text.</inlineHelpText>
    <label>Encrypt Attachment Logs</label>
    <type>Checkbox</type>
</CustomField>