unpackaged/main/default/objects/Configuration__mdt/fields/EncryptionKey__c.field-meta.xml
<CustomField>
    <fullName>EncryptionKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field stores the encryption key to be used in the different parts of the code.</description>
    <inlineHelpText>This field stores the encryption key to be used in the different parts of the code.</inlineHelpText>
    <label>Encryption Key</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>