unpackaged/main/default/objects/Configuration__mdt/fields/EncryptTransactionFields__c.field-meta.xml
<CustomField>
    <fullName>EncryptTransactionFields__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This defines if all the Transaction fields must be encrypted.</description>
    <inlineHelpText>This defines if all the Transaction fields must be encrypted.</inlineHelpText>
    <label>Encrypt Transaction Fields</label>
    <type>Checkbox</type>
</CustomField>