unpackaged/main/default/objects/Configuration__mdt/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>This field determines the logging level of the App.</description>
    <inlineHelpText>This field determines the logging level of the App.</inlineHelpText>
    <label>Logging Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Exceptions Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>